Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
body.vpdb-Body {
  background-image: unset;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";

  .vpdb-RootContainer {

    display: grid;

    // FIXME: Should also provide fallback styling for IE11,
    // as unfortunately, IE11 doesn't support grid-template-areas
    grid-template-areas:
      "header"
      "content"
      "footer";
    
    grid-template-rows: 9.0625rem 1fr auto;
  
    min-height: 100vh;

    .vpdb-HeaderContainer {
      grid-area: header;
    }

    .vpdb-Header {
      &SearchBarToggle {
        &__hidden {
          display: none;
        }
      }
    
      &__collapsed {
        height: 4.0625rem;
        padding: 10px 20px;
        box-shadow: 0 2px 4px #00000066;

        .ebrc-HeaderBranding {
          font-size: 25px;
          color: white;
        }

        .ebrc-FooterSocialMediaLinks {
          display: none;
        }
      }

      .vpdb-SubmenuDivider {
        padding: 0.5rem 0.125rem;
        border-top: 0.0625rem solid gray;
        border-bottom: 0.0625rem solid gray;
        font-weight: bold;
      }

      .wdk-CategoriesCheckboxTreeWrapper {
        position: relative;
        .wdk-CheckboxTreeItem__leaf {
          .wdk-CheckboxTreeNodeContent { 
            a {
              color: #069;
            }
      
            i {
              margin-right: 0.25em;
            }
          }
        }
      }

      .vpdb-CommunitySocialMediaLink {
        display: flex;
        align-items: center;

        i, svg {
          margin-right: 0.5em;
        }

        &__wide {
          i, svg {
            margin-right: 0.325rem;
          }
        }
      }
    }
    
    .vpdb-SearchPane {
      grid-area: nav;
    }

    .vpdb-Main {
      grid-area: content;

      margin: 1rem 0;
      padding: 0 2rem;

      > hr {
        margin: 1.5rem 0 0.5rem 0;
      }
    }

    .vpdb-NewsPane {
      grid-area: side;
      border-left: 0.0625rem solid;
    }

    .vpdb-Footer {
      grid-area: footer;
    }

    @media screen and (max-width: 767px) {
      display: flex;
      flex-direction: column;
    }

    &__header-collapsed {
      grid-template-rows: 4.0625rem 1fr auto;
    }

    &.PlasmoDB {
      .vpdb-BgDark {
        background-color: #682039;
        // Runner-up: #662332
        // Runner-up: #3a1428 (maybe a little too dark)
      }

      .vpdb-BdDark {
        border-color: #682039; 
      }

      .vpdb-Header {
        background-image: url('~site/images/PlasmoDB/vpdb-background.jpg');
        background-size: cover;

        .ebrc-HeaderBranding {
          position: relative;
          bottom: 10px;
          height: calc(72px * 1.2);
          content: url('~site/images/PlasmoDB/plasmo-logo_new-homepage2.png');
        }

        &__collapsed {
          .ebrc-HeaderBranding {
            bottom: 0px;
            height: calc(48px * 1.15);
          }
        }
      }
    }

    &.VEuPathDB {
      .vpdb-Header {
        background-color: slategray;

        .ebrc-HeaderBranding {
          position: relative;
          bottom: 10px;
          height: 72px;
          content: url('~site/images/VEuPathDB/title_s.png');
        }

        &__collapsed {
          .ebrc-HeaderBranding {
            bottom: 0px;
            height: 48px;
          }
        }
      }
    }

    &__home {
      // FIXME: Should also provide fallback styling for IE11,
      // as unfortunately, IE11 doesn't support grid-template-areas
      grid-template-areas:
        "header header header"
        "nav content side"
        "footer footer footer";
    
      grid-template-columns: 15.625rem 1fr 18.75rem;
      grid-template-rows: 9.0625rem 1fr auto;

      .vpdb-Main {
        overflow: hidden;
      }
    }

  }

  .vpdb-BgDark {
    background-color: #00304c;
  }

  .vpdb-BdDark {
    border-color: #00304c; 
  }

  .vpdb-BgWash {
    background-color: #eef0f2;
  }

  // Fix for question page sticky header
  .wdk-QuestionFormQuestionHeader {
    top: 5.5em;
  }
}

